[gd_scene load_steps=25 format=3 uid="uid://cy7v5ljomwnh7"]

[ext_resource type="Script" path="res://scenes/main_menu_hud.gd" id="1_1woqv"]
[ext_resource type="FontFile" uid="uid://cetbfybj34y56" path="res://assets/fonts/DePixelHalbfett.ttf" id="1_avxj8"]
[ext_resource type="Texture2D" uid="uid://e7q28afy03o1" path="res://assets/art/terrain.png" id="2_i1utb"]
[ext_resource type="Texture2D" uid="uid://bn8wjoswoctq2" path="res://assets/art/sakuraflower.png" id="4_n2kn7"]
[ext_resource type="FontFile" uid="uid://cdhwicg75vpwh" path="res://assets/fonts/Kawaii eyes.ttf" id="5_b2gy6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vl878"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o4yng"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pm1ux"]

[sub_resource type="Animation" id="Animation_7ipq4"]
resource_name = "bounce"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3satx"]
_data = {
"bounce": SubResource("Animation_7ipq4")
}

[sub_resource type="Animation" id="Animation_g8p6d"]
resource_name = "bounce"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0349066, -0.0349066, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xvnv7"]
_data = {
"bounce": SubResource("Animation_g8p6d")
}

[sub_resource type="SegmentShape2D" id="SegmentShape2D_0lb01"]
a = Vector2(-24, -25)
b = Vector2(1992, -22)

[sub_resource type="Animation" id="Animation_xrvy6"]
resource_name = "bounce"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.8, 1.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41a43"]
_data = {
"bounce": SubResource("Animation_xrvy6")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jmcap"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m3eo4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rkgd7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ng71g"]

[sub_resource type="Animation" id="Animation_0c6ua"]
resource_name = "bounce"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(409, 698), Vector2(412, 698), Vector2(412, 702), Vector2(409, 702), Vector2(409, 698)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5nohb"]
_data = {
"bounce": SubResource("Animation_0c6ua")
}

[sub_resource type="Animation" id="Animation_or2qa"]
resource_name = "bounce"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wwt76"]
_data = {
"bounce": SubResource("Animation_or2qa")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6lbvr"]

[node name="MainMenuHUD" type="CanvasLayer"]
script = ExtResource("1_1woqv")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_i1utb")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-82, -102)
amount = 32
lifetime = 2.0
speed_scale = 0.1
texture = ExtResource("4_n2kn7")
gravity = Vector2(600, 900)
initial_velocity_max = 1000.0
angle_min = -226.9

[node name="CPUParticles2D" type="CPUParticles2D" parent="CPUParticles2D"]
amount = 32
lifetime = 2.0
speed_scale = 0.5
gravity = Vector2(600, 980)
initial_velocity_max = 1000.0
scale_amount_max = 10.43
color = Color(1, 0.588235, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 250.0
offset_top = 600.0
offset_right = 550.0
offset_bottom = 782.0
pivot_offset = Vector2(139.807, 87.9651)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_next = NodePath("../OptionButton")
focus_previous = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_vl878")
text = "start"
flat = true

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../StartButton")
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_o4yng")
text = "options"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../OptionButton")
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_pm1ux")
text = "quit
"
flat = true

[node name="BoxAnimPlayer" type="AnimationPlayer" parent="VBoxContainer"]
libraries = {
"": SubResource("AnimationLibrary_3satx")
}

[node name="Title" type="Label" parent="."]
offset_left = 616.0
offset_top = 167.0
offset_right = 1763.0
offset_bottom = 328.0
rotation = 0.0872665
pivot_offset = Vector2(571, 90)
mouse_filter = 0
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 128
text = "sakura pong"

[node name="TitleAnimPlayer" type="AnimationPlayer" parent="Title"]
libraries = {
"": SubResource("AnimationLibrary_xvnv7")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("SegmentShape2D_0lb01")

[node name="Eyes" type="Label" parent="."]
offset_left = 1132.0
offset_top = 196.0
offset_right = 1433.0
offset_bottom = 769.0
rotation = -0.413643
pivot_offset = Vector2(139, 457)
mouse_filter = 0
theme_override_fonts/font = ExtResource("5_b2gy6")
theme_override_font_sizes/font_size = 512
text = "n"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EyesAnimPlayer" type="AnimationPlayer" parent="Eyes"]
libraries = {
"": SubResource("AnimationLibrary_41a43")
}

[node name="Options" type="VBoxContainer" parent="."]
offset_left = 250.0
offset_top = 1200.0
offset_right = 290.0
offset_bottom = 1240.0
metadata/_edit_group_ = true

[node name="OptionLabel" type="Label" parent="Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 64
text = "options

"

[node name="VolumeLabel" type="Label" parent="Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 32
text = "volume"

[node name="VolumeSlider" type="HSlider" parent="Options"]
layout_mode = 2
tooltip_text = "change volume with that slider"
focus_next = NodePath("../GoBackButton")
max_value = 80.0

[node name="GoBackButton" type="Button" parent="Options"]
layout_mode = 2
focus_previous = NodePath("../VolumeSlider")
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_jmcap")
text = "go back"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -549.78
offset_top = 698.0
offset_right = 637.22
offset_bottom = 787.0
grow_horizontal = 2
scale = Vector2(1.01365, 1.01365)
pivot_offset = Vector2(550.176, 47.3127)
size_flags_horizontal = 4
alignment = 1

[node name="Easy" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../ReturnButton")
focus_neighbor_right = NodePath("../Normal")
focus_next = NodePath("../Normal")
focus_previous = NodePath("../../ReturnButton")
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_m3eo4")
text = "easy  "
flat = true

[node name="Normal" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Easy")
focus_neighbor_right = NodePath("../Impossible")
focus_next = NodePath("../Impossible")
focus_previous = NodePath("../Easy")
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_rkgd7")
text = "normal  "
flat = true

[node name="Impossible" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Normal")
focus_previous = NodePath("../Normal")
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_ng71g")
text = "impossible"
flat = true

[node name="HBoxAnimPlayer" type="AnimationPlayer" parent="HBoxContainer"]
libraries = {
"": SubResource("AnimationLibrary_5nohb")
}

[node name="DifficultyLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -734.5
offset_top = -300.0
offset_right = 734.5
offset_bottom = -179.0
grow_horizontal = 2
scale = Vector2(1.01927, 1.01927)
pivot_offset = Vector2(737.5, 52)
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 96
text = "choose you difficulty"
horizontal_alignment = 1

[node name="DifficultyAnimPlayer" type="AnimationPlayer" parent="DifficultyLabel"]
libraries = {
"": SubResource("AnimationLibrary_wwt76")
}

[node name="ReturnButton" type="Button" parent="."]
offset_left = -300.0
offset_top = 130.0
offset_right = -92.0
offset_bottom = 179.0
focus_neighbor_right = NodePath("../HBoxContainer/Easy")
focus_next = NodePath("../HBoxContainer/Easy")
theme_override_fonts/font = ExtResource("1_avxj8")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_6lbvr")
text = "<- return"
flat = true
metadata/_edit_group_ = true

[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/StartButton" to="." method="_reset_eyes"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/OptionButton" to="." method="_on_option_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/OptionButton" to="." method="_reset_eyes"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/QuitButton" to="." method="_reset_eyes"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="mouse_entered" from="Title" to="." method="_on_title_mouse_entered"]
[connection signal="mouse_exited" from="Title" to="." method="_reset_eyes"]
[connection signal="mouse_entered" from="Eyes" to="." method="_on_eyes_mouse_entered"]
[connection signal="mouse_exited" from="Eyes" to="." method="_reset_eyes"]
[connection signal="value_changed" from="Options/VolumeSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Options/GoBackButton" to="." method="_on_go_back_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="HBoxContainer/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="HBoxContainer/Impossible" to="." method="_on_impossible_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
